@@ -65,6 +65,8 @@ class HTTPRequest extends Component {
 
 	const METHOD_GET = 'GET';
 	const METHOD_POST = 'POST';
+	const METHOD_PUT = 'PUT';
+	const METHOD_DELETE = 'DELETE';
 	
 	/**
 	 * Concrete Request Method
